--- a/app/src/main/res/layout/home_customer_fragment.xml
+++ b/app/src/main/res/layout/home_customer_fragment.xml
@@ -87,7 +87,10 @@
             android:id="@+id/vf_banner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:flipInterval="@integer/material_motion_duration_medium_2">
+            android:flipInterval="2000"
+            android:inAnimation="@anim/slide_in"
+            android:outAnimation="@anim/slide_out"
+            android:autoStart="true">
 
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:layout_width="match_parent"
