--- a/app/src/main/res/layout/booking_fragment.xml
+++ b/app/src/main/res/layout/booking_fragment.xml
@@ -3,12 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".presentation.fragments.booking.BookingFragment">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/label_booking"
+        android:gravity="center"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:padding="20dp"
+        android:background="@color/blue_bar"/>
 
-    <TableLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/tb_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <com.google.android.material.tabs.TabItem
             android:layout_width="wrap_content"
@@ -25,34 +36,49 @@
             android:layout_height="wrap_content"
             android:text="@string/canceled"/>
 
-    </TableLayout>
+    </com.google.android.material.tabs.TabLayout>
 
-    <ImageView
-        android:id="@+id/iv_booking"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_ticket_booking_empty"
-        android:contentDescription="@string/cd_icon_booking_empty" />
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/you_dont_have_any_booking_yet"/>
+        <ImageView
+            android:id="@+id/iv_booking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_ticket_booking_empty"
+            android:contentDescription="@string/cd_icon_booking_empty"
+            android:layout_gravity="center"
+            android:layout_marginTop="200dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/your_booking_will_appear"/>
+        <TextView
+            style="@style/Text.Medium.Bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/you_dont_have_any_booking_yet"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"/>
 
-    <TextView
-        android:id="@+id/tv_selected_tab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        <TextView
+            style="@style/Text.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/your_booking_will_appear"/>
 
-    <include
-        android:id="@+id/included_non_login"
-        layout="@layout/layout_non_login"
-        android:visibility="invisible"/>
+        <TextView
+            android:id="@+id/tv_selected_tab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <include
+            android:id="@+id/included_non_login"
+            layout="@layout/layout_non_login"
+            android:visibility="gone"/>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 
 </androidx.appcompat.widget.LinearLayoutCompat>
 
