--- a/app/src/main/res/layout/home_customer_fragment.xml
+++ b/app/src/main/res/layout/home_customer_fragment.xml
@@ -86,11 +86,7 @@
         <ViewFlipper
             android:id="@+id/vf_banner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:flipInterval="2000"
-            android:inAnimation="@anim/slide_in"
-            android:outAnimation="@anim/slide_out"
-            android:autoStart="true">
+            android:layout_height="wrap_content">
 
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:layout_width="match_parent"
