--- a/app/src/main/res/layout/inbox_fragment.xml
+++ b/app/src/main/res/layout/inbox_fragment.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragments.inbox.InboxFragment">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/label_inbox"
+        android:gravity="center"
+        android:textSize="14sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:padding="20dp"
+        android:background="@color/blue_bar"/>
+
     <ViewFlipper
         android:id="@+id/vf_inbox"
         android:layout_width="match_parent"
