--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="yellow_ffa216">#FFA216</color>
     <color name="blue_0063a7">#0063A7</color>
     <color name="grey_strong">#606060</color>
+
+    <color name="blue_bar">#0063A7</color>
 </resources>
