--- a/app/src/main/res/layout/signin_fragment.xml
+++ b/app/src/main/res/layout/signin_fragment.xml
@@ -153,7 +153,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Doesn’t have an account?" />
+                        android:text="@string/does_not_have_an_account" />
 
                     <TextView
                         android:id="@+id/tv_signup"
@@ -161,7 +161,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_4sdp"
-                        android:text="Register here" />
+                        android:text="@string/register_here" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </LinearLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>
