--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -306,6 +306,11 @@
                             android:src="@drawable/ic_arrow_next" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="0.5dp"
+                        android:background="@color/black" />
+
                     <androidx.appcompat.widget.LinearLayoutCompat
                         android:id="@+id/ll_sign_out"
                         android:layout_width="match_parent"
