minor updates google login

--- a/app/src/main/res/layout/account_fragment.xml
+++ b/app/src/main/res/layout/account_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,8 +24,8 @@
                 android:orientation="vertical">
 
                 <include
-                    android:id="@+id/app_bar"
-                    layout="@layout/layout_appbar" />
+                    android:id="@+id/title_bar"
+                    layout="@layout/title_bar"/>
 
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/iv_profile"
