--- a/app/src/main/res/layout/booking_fragment.xml
+++ b/app/src/main/res/layout/booking_fragment.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".presentation.fragments.booking.BookingFragment">
+
+    <include android:id="@+id/title_bar" layout="@layout/title_bar"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tb_layout"
