--- a/app/src/main/res/layout/inbox_fragment.xml
+++ b/app/src/main/res/layout/inbox_fragment.xml
@@ -5,6 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".presentation.fragments.inbox.InboxFragment">
 
+    <include android:id="@+id/title_bar" layout="@layout/title_bar"/>
+
     <ViewFlipper
         android:id="@+id/vf_inbox"
         android:layout_width="match_parent"
