--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -53,6 +53,9 @@
         <action
             android:id="@+id/action_signinFragment_to_accountFragment"
             app:destination="@id/accountFragment" />
+        <action
+            android:id="@+id/action_signinFragment_to_homeCustomerFragment"
+            app:destination="@id/homeCustomerFragment" />
     </fragment>
     <fragment
         android:id="@+id/signupFragment"
