--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -49,6 +49,7 @@
         android:text="@string/label_account_greetings"
 
         app:layout_constraintStart_toEndOf="@+id/iv_profile"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/vw_line_2"
         />
