--- a/app/src/main/res/layout/layout_skeleton_item_product_category.xml
+++ b/app/src/main/res/layout/layout_skeleton_item_product_category.xml
@@ -8,12 +8,12 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_category_prouduct"
-        android:layout_width="@dimen/_54sdp"
-        android:layout_height="@dimen/_54sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@color/grey"
-        android:src="@drawable/rounded_grey"
-        app:shapeAppearanceOverlay="@style/circleImageView" />
+
+        android:src="@drawable/ic_tour"
+     />
 
     <TextView
         android:id="@+id/tv_category_product"
@@ -22,5 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_8sdp"
+        android:gravity="center"
+        android:text="Tour"
         android:background="@drawable/rounded_grey" />
 </androidx.appcompat.widget.LinearLayoutCompat>
