--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -158,6 +158,10 @@
         android:id="@+id/editProfile"
         android:name="com.devfutech.paradisonesia.presentation.fragments.edit_profile.EditProfile"
         android:label="edit_profile"
-        tools:layout="@layout/edit_profile" />
+        tools:layout="@layout/edit_profile" >
+        <action
+            android:id="@+id/action_editProfile_to_accountFragment"
+            app:destination="@id/accountFragment" />
+    </fragment>
 
 </navigation>
