--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="grey_strong">#606060</color>
 
     <color name="pale_red">#EC6565</color>
+
+    <color name="semi_transparent">#F24E4C4C</color>
 </resources>
