--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -81,7 +81,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_full_name" >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_full_name_value"
+                android:id="@+id/tie_full_name_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
@@ -138,7 +138,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_birthday">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_calendar_pick"
+                android:id="@+id/tie_calendar_pick_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/dd_mm_yyyy"
@@ -179,7 +179,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_address" >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_address"
+                android:id="@+id/tie_address_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text" />
@@ -204,7 +204,7 @@
 
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_email_value"
+                android:id="@+id/tie_email_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress" />
@@ -229,7 +229,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_phone_number_value"
+                android:id="@+id/tie_phone_number_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="phone"/>
