--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -63,22 +63,14 @@
 
         app:layout_constraintTop_toBottomOf="@+id/vw_line_2">
 
-        <TextView
-            android:id="@+id/tv_full_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hint_full_name"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
-
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_full_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/InputLayout"
+            android:hint="@string/hint_full_name"
 
-            app:layout_constraintTop_toBottomOf="@+id/tv_full_name" >
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tie_full_name_value"
@@ -106,8 +98,11 @@
             style="@style/InputLayout"
 
             app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintVertical_bias="0.75"
+
             app:layout_constraintEnd_toStartOf="@+id/til_calendar_pick"
             app:layout_constraintTop_toBottomOf="@+id/tv_gender"
+            app:layout_constraintBottom_toBottomOf="@+id/til_calendar_pick"
             app:layout_constraintStart_toStartOf="parent">
 
             <Spinner
@@ -141,8 +136,10 @@
                 android:id="@+id/tie_calendar_pick_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/dd_mm_yyyy"
+                android:inputType="date"
                 android:gravity="center"
+                android:enabled="false"
+                android:textColor="@color/black"
                 style="@style/EditText"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -161,78 +158,59 @@
             app:layout_constraintStart_toEndOf="@+id/til_calendar_pick"
             app:layout_constraintEnd_toEndOf="parent"/>
 
-        <TextView
-            android:id="@+id/tv_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/address"
-
-            app:layout_constraintTop_toBottomOf="@+id/til_calendar_pick"/>
-
-
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/InputLayout"
+            android:hint="@string/hint_address"
 
-            app:layout_constraintTop_toBottomOf="@+id/tv_address" >
+            app:layout_constraintTop_toBottomOf="@+id/til_calendar_pick"
+            android:layout_marginTop="@dimen/_10sdp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tie_address_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
+                android:inputType="textMultiLine"
+                style="@style/EditText"/>
 
         </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/tv_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/label_email"
-
-            app:layout_constraintTop_toBottomOf="@+id/til_address"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/InputLayout"
-
-            app:layout_constraintTop_toBottomOf="@+id/tv_email" >
+            android:hint="@string/label_email"
+            app:layout_constraintTop_toBottomOf="@+id/til_address"
+            android:layout_marginTop="@dimen/_10sdp">
 
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tie_email_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                style="@style/EditText"/>
 
         </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:id="@+id/tv_phone_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/hint_phone_number"
-
-            app:layout_constraintTop_toBottomOf="@+id/til_email"/>
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/InputLayout"
-
-            app:layout_constraintTop_toBottomOf="@+id/tv_phone_number" >
+            android:hint="@string/hint_phone_number"
+            app:layout_constraintTop_toBottomOf="@+id/til_email"
+            android:layout_marginTop="@dimen/_10sdp">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/tie_phone_number_value"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="phone"/>
+                android:inputType="phone"
+                style="@style/EditText"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
