--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -234,8 +234,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/semi_transparent"
-        android:gravity="center"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:gravity="center">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="wrap_content"
@@ -268,13 +268,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:headerBackground="@color/navy_blue.primary"
-                android:background="@color/aquamarine.primary"
+                android:background="@color/white"
                 />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/aquamarine.primary"
+                android:background="@color/white"
                 android:gravity="end"
 
                 android:paddingStart="0dp"
